# mail-rs

./: Cargo.toml  README.md  email.hbs  emails.csv  justfile  tos.csv
src/: cli.rs  database.rs  main.rs  user.rs
src/email/: gmail.rs  mod.rs
